added Le Petit Joueur

--- a/pierre_stuff/1.0/music/songs_to_normal_people.html
+++ b/pierre_stuff/1.0/music/songs_to_normal_people.html
@@ -249,6 +249,172 @@ And the price to pay for Penelope (2x)</p></td>
 </table>
 </div>
 </div>
+<div class="sect1">
+<h2 id="joueur"><a class="anchor" href="#joueur"></a>Le Petit Joueur de Flûteau (The Little Piper)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>I remember not being carried away by this song as a child. Much later, I completely changed my mind. The theme perfectly illustrates Brassens' taste for simplicity and loyalty, rather than fame and money. Not just Brassens', by the way. This wariness, even suspicion towards money and fame as corrupting agents is typically French. Not entirely unfounded, although sometimes a bit excessive. The title, as well as the music and lyrics of the first two lines, lure the audience into expecting a somewhat naïve song, a tale for children. But then the full Brassens arsenal is deployed: an original angle, hugely creative lyrics highlighted by a not-so-simple melody. Long story short, this has become one of my (many) favourite Brassens songs.</p>
+</div>
+<div class="paragraph">
+<p>It tells about a musician from a little village, who is offered fame and ennoblement by the king because his songs are so beautiful. He refuses because he fears it might cause him to despise his origins and lose his soul. Of course, this musician is Brassens himself as he wanted to remain. And indeed, although he bought a nice house and a car at one point in his life, he did stick to the Little Piper&#8217;s philosophy. This is one of the reasons, in addition to his dazzling talent, why he is such a legend in France.</p>
+</div>
+<div class="paragraph">
+<p>The language of the song is borrowed from the traditional way of speaking in modest country backgrounds. No longer spoken today, it sounds both naïve and elegant to our modern ears – and most endearing.</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The side-by-side columns of text may be misaligned when viewing on a mobile. If that happens, rotate the screen to view it in landscape mode.
+</td>
+</tr>
+</table>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Le petit joueur de flûteau<br>
+Menait la musique au château.<sup class="footnote">[<abbr title="Another unusual phrase which sounds perfectly natural. The little piper was 'musician in chief' in the castle.">28</abbr>]</sup><br>
+Pour la grâce de ses chansons<br>
+Le roi lui offrit un blason.<br>
+"Je ne veux pas être noble"<br>
+Répondit le croque-notes…<sup class="footnote">[<abbr title="Oldish term for 'musician'. Reminds me of another great song from Brassens: La Princesse et le Croque-Notes.">29</abbr>]</sup><br>
+"Avec un blason<sup class="footnote">[<abbr title="Figurative for 'ennoblement'.">30</abbr>]</sup> à la clé<sup class="footnote">[<abbr title="Elaborate double meaning. 'À la clé'' is a common phrase that roughly means 'at stake' (or sometimes 'as a consequence', e.g. : 'il va y avoir une guerre, avec des milliers de morts à la clé'). But 'clé'' also means the clef of a music score, e.g., 'clé de sol' = 'treble clef'. In music, 'à la clé' refers to instructions located by the clef on the score sheet (typically: measure indication, or flat / sharp notes). Therefore, the line conveys two meanings: 1. With grand things at stake, he will get bloated and become ashamed of his roots. 2. The tokens of his glory will clutter his music score, i.e., distract him from his music.">31</abbr>]</sup><br>
+Mon la<sup class="footnote">[<abbr title="English would say 'my head would start swelling', and French as well ('ma tête se mettrais à enfler'). But Brassens, as usual, tweaks it. 'la' means the A note here. What the minstrel means is 'my music would get bloated'.">32</abbr>]</sup> se mettrait à gonfler<br>
+On dirait par tout le pays<sup class="footnote">[<abbr title="'le pays' is used in an old rural sense: the village and its surroundings. Modern French would say 'Dans toute la région'. 'Par tout&#8230;&#8203;' instead of 'dans tout' sounds deliciously oldish as well. 'Par tout', not 'partout'!">33</abbr>]</sup><br>
+Le joueur de flûte a trahi<sup class="footnote">[<abbr title="Normally, you betray something or someone. 'Il a trahi' without an object actually means 'He has become a traitor'.">34</abbr>]</sup><br>
+<br>
+Et mon pauvre petit clocher<br>
+Me semblerait trop bas perché<sup class="footnote">[<abbr title="Lovely tweak again. The usual idiomatic phrase is 'haut perché'' (referring to a bird, for instance). 'Bas perché'' is never used… except by Brassens, efficiently picturing something 'at the top but not very high'…">35</abbr>]</sup>.<br>
+Je ne plierais plus les genoux<br>
+Devant le bon Dieu de chez nous<sup class="footnote">[<abbr title="There is something endearingly simple in this sentence. 'Le Bon Dieu' and 'de chez nous' were common phrases used by simple people in the old days.">36</abbr>]</sup>.<br>
+Il faudrait à ma grande âme<br>
+Tous les saints de Notre-Dame…<br>
+Avec un évêque à la clé<br>
+Mon la se mettrait à gonfler<br>
+On dirait par tout le pays<br>
+Le joueur de flûte a trahi<br>
+<br>
+Et la chambre où j&#8217;ai vu le jour<sup class="footnote">[<abbr title="'Voir le jour' = 'naître' (formal)">37</abbr>]</sup><br>
+Me serait un triste séjour<sup class="footnote">[<abbr title="'Séjour' usually means 'stay' (as a noun). But, in this older sense, it refers to the place where one is staying instead of the stay itself. Also note the formal and elegantly compact 'Me serait…'  = 'would be, for me, …'.">38</abbr>]</sup>.<br>
+Je quitterais mon lit mesquin<sup class="footnote">[<abbr title="'mesquin' usually means 'petty', 'lacking generosity'. But here it says that the bed is not a comfy one…">39</abbr>]</sup><br>
+Pour une couche<sup class="footnote">[<abbr title="Formal term for 'bed', used in 'classical French'.">40</abbr>]</sup> à baldaquin.<br>
+Je changerais ma chaumière<br>
+Pour une gentilhommière…<br>
+Avec un manoir à la clé<br>
+Mon la se mettrait à gonfler<br>
+On dirait par tout le pays<br>
+Le joueur de flûte a trahi<br>
+<br>
+Je serais honteux de mon sang<br>
+Des aïeux de qui<sup class="footnote">[<abbr title="Modern form would be 'des aïeux dont&#8230;&#8203;'. Again, 'de qui' sounds like an old language used by simple people.">41</abbr>]</sup> je descends.<br>
+On me verrait bouder dessus<sup class="footnote">[<abbr title="'Bouder dessus' = old form of 'bouder sur'.  Again, old language used by simple people.">42</abbr>]</sup><br>
+La branche dont je suis issu<sup class="footnote">[<abbr title="'être issu de' = 'to stem from', often referring to the background someone comes from.">43</abbr>]</sup>.<br>
+Je voudrais un magnifique<br>
+Arbre généalogique…<br>
+Avec du sang bleu<sup class="footnote">[<abbr title="'sang bleu' = noble blood, as in English, I believe. Now used ironically.">44</abbr>]</sup> à la clé<br>
+Mon la se mettrait à gonfler<br>
+On dirait par tout le pays<br>
+Le joueur de flûte a trahi<br>
+<br>
+Je ne voudrais plus épouser<br>
+Ma promise<sup class="footnote">[<abbr title="Oldish term for 'bride'. Sounds lovely, even if being 'promised' in the literal sense is not enviable…">45</abbr>]</sup>, ma fiancée.<br>
+Je ne donnerais pas mon nom<br>
+A une quelconque Ninon<sup class="footnote">[<abbr title="Ninon is a first name that must have been very common among lower-class women, typically servants. It became a common name for 'a poor, simple girl' – but slightly derogatory.">46</abbr>]</sup>.<br>
+Il me faudrait pour compagne<br>
+La fille d&#8217;un Grand d&#8217;Espagne…<sup class="footnote">[<abbr title="'Grand d&#8217;Espagne' = high title in the Spanish noble class.">47</abbr>]</sup><br>
+Avec un' princesse à la clé<br>
+Mon la se mettrait à gonfler<br>
+On dirait par tout le pays<br>
+Le joueur de flûte a trahi"<br>
+<br>
+Le petit joueur de flûteau<br>
+Fit la révérence au château.<br>
+Sans armoiries, sans parchemin<br>
+Sans gloire il se mit en chemin<br>
+Vers son clocher, sa chaumine<sup class="footnote">[<abbr title="'Chaumine' is much less common than 'chaumière'. It&#8217;s close but refers specifically to a small, modest house.">48</abbr>]</sup><br>
+Ses parents et sa promise<sup class="footnote">[<abbr title="'clocher, chaumine, parents, promise': I love this subtle reference to the previous four verses.">49</abbr>]</sup>.<br>
+Nul ne dise<sup class="footnote">[<abbr title="'Nul ne dise' et 'Dieu reconnaisse': subjunctive form translated as 'let…'' in English. A more common form would be 'Que nul ne dise…', but omitting 'que' is actually more elegant and more formal. Also note the formal use of 'nul' as 'no one'. A famous example: 'Nul n&#8217;est censé ignorer la loi', meaning that breaking the law by ignorance is still breaking the law…">50</abbr>]</sup> dans le pays<br>
+"Le joueur de flûte a trahi"<br>
+Et Dieu reconnaisse pour sien<br>
+Le brave petit musicien.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The little piper<br>
+Was leading the music in the castle.<br>
+For the grace of his songs<br>
+The king offered him a coat of arms.<br>
+"I don&#8217;t want to be noble"<br>
+Answered the minstrel…<br>
+"With a coat of arms at stake<br>
+My A would start swelling<br>
+They would say all over the country<br>
+The flute player has betrayed (us)<br>
+<br>
+And my poor little steeple<br>
+Would seem too low to me.<br>
+I would no longer bend my knees<br>
+Before the good God of our village<br>
+My great soul would need<br>
+All the saints of Notre Dame.<br>
+With a bishop at stake<br>
+My A would start swelling<br>
+They would say all over the country<br>
+The flute player has betrayed (us)<br>
+<br>
+And the room where I was born<br>
+Would be a dull place for me to stay.<br>
+I would leave my basic cot<br>
+For a four-poster bed.<br>
+I would change my thatched cottage<br>
+For a nobleman&#8217;s mansion…<br>
+With a manor at stake<br>
+My A would start swelling<br>
+They would say all over the country<br>
+The flute player has betrayed (us)<br>
+<br>
+I would be ashamed of my blood,<br>
+Of the forefathers I am descended.<br>
+I would be seen sulking at<br>
+The branch from which I come.<br>
+I would want a magnificent<br>
+Family tree…<br>
+With blue blood at stake<br>
+My A would start swelling<br>
+They would say all over the country<br>
+The flute player has betrayed (us)<br>
+<br>
+I would no longer want to marry<br>
+My bride, my fiancée.<br>
+I wouldn&#8217;t give my name<br>
+To any odd country girl.<br>
+I would need, as a companion,<br>
+The daughter of a Spanish Duke<br>
+With a princess at stake<br>
+My A would start swelling<br>
+They would say all over the country<br>
+The flute player has betrayed (us)"<br>
+<br>
+The little piper<br>
+Bowed to the castle.<br>
+Without coat of arms, without parchment<br>
+Without glory he set off<br>
+Towards his steeple, his thatch,<br>
+His parents and his bride.<br>
+Let no one say in the country<br>
+"The flute player has betrayed us"<br>
+And may God recognize as his own<br>
+The brave little musician.</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
   <div class="toc-menu"></div>
