updated comment about Saturne

--- a/pierre_stuff/1.0/music/love_songs.html
+++ b/pierre_stuff/1.0/music/love_songs.html
@@ -154,7 +154,7 @@
 <h2 id="nondemande"><a class="anchor" href="#nondemande"></a>La Non Demande en Mariage (The Non Proposal of Marriage)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>So… <em>La Non Demande en Mariage</em> is a super romantic love letter to Brassens' life-long lover and muse Joha Heiman, aka Püppchen. As the song suggests, they never married nor lived under the same roof – although their relationship remained very strong and faithful until his death. Brassens wrote several songs for Püppchen. <em>La Non Demande en Mariage</em> is my favourite, on par with the wonderful <em>Saturne</em> – the first two verses of which I will add as a bonus…</p>
+<p>So… <em>La Non Demande en Mariage</em> is a super romantic love letter to Brassens' life-long lover and muse Joha Heiman, aka Püppchen. As the song suggests, they never married nor lived under the same roof – although their relationship remained very strong and faithful until his death. Brassens wrote several songs for Püppchen. <em>La Non Demande en Mariage</em> is my favourite, on par with the wonderful <em>Saturne</em>, which I will add as a bonus, although with less detailed comments.</p>
 </div>  
 <div class="admonitionblock note">
 <table>
