side-pane nav fix

--- a/pierre_stuff/1.0/music/gorille.html
+++ b/pierre_stuff/1.0/music/gorille.html
@@ -62,7 +62,7 @@
   <li class="nav-item is-current-page" data-depth="3">
     <a class="nav-link" href="gorille.html">Le Gorille</a>
   </li>
-  <li class="nav-item is-current-page" data-depth="3">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="love_songs.html">Love songs</a>
   </li>
   <li class="nav-item" data-depth="3">
