--- a/pierre_stuff/1.0/science/autochromes.html
+++ b/pierre_stuff/1.0/science/autochromes.html
@@ -63,10 +63,10 @@
     <a class="nav-link" href="../music/gorille.html">Le Gorille</a>
   </li>
   <li class="nav-item is-current-page" data-depth="3">
-    <a class="nav-link" href="love_songs.html">Love songs</a>
+    <a class="nav-link" href="../love_songs.html">Love songs</a>
   </li>
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="songs_to_normal_people.html">Songs to "normal people"</a>
+    <a class="nav-link" href="../songs_to_normal_people.html">Songs to "normal people"</a>
   </li>
 </ul>
   </li>
