--- a/pierre_stuff/1.0/index.html
+++ b/pierre_stuff/1.0/index.html
@@ -62,6 +62,12 @@
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="music/gorille.html">Le Gorille</a>
   </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="music/love_songs.html">Love songs</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="music/songs_to_normal_people.html">Songs to "normal people"</a>
+  </li>
 </ul>
   </li>
 </ul>
